# RISCVuzz

./: .gitignore  README.md  bin_to_c.py  client.c  client.h  config.cfg  config.json  config.py  encoded.s  ghostwrite.c  linker.ld  main  main.c  main.c~  main.h  old_server.txt  output.c  riscv_gen.py  riscv_gen2.py  sandbox.S  server.c  signal_trampoline.S  storage.py  temp.py  test.S
Server/: generate.py  main.py  server.py
Server/generator/: Config.js  Constants.js  Encoder.js  Instruction.js  main.mjs  package.json  test.js
Server/vector_generator/: Cargo.toml  test.s
Server/vector_generator/rvv-as/src/: main.rs
Server/vector_generator/rvv-encode/: Cargo.toml
Server/vector_generator/rvv-encode/src/: lib.rs  opcodes.rs
client/: client.c  client.c~  client.h  client.z~  sandbox.S  sandbox.c  sandbox.h  signal_trampoline.S
generator/: Constants.js  Encoder.js  Instruction.js  test.js
storage/: compare_output_script.py  old_main.txt  riscv_gen.py  storage.txt  tcp_main.txt  tcp_server.txt  uart_main.txt  uart_server.txt
testing/: test_instr.c
